# Hackaton

./: compile.sh  gsr  gstreamer_receiver  gstreamer_transmitter  gsv  hsv_picker.py  script.py  vnc_config.sh
App/: Beep.h  CMakeLists.txt  Connect.cpp  Connect.h  Exception.h  Gservo.h  History.h  List.h  TextCmd.h  Vision.cpp  Vision.h  graphics.h  header.h  main.cpp  str.h
Arduino/: Arduino.ino  Bot.h  Camera.h  Claw.h  Config.h  Connection.h  Servo.h
Python/: FindBear.py  FindGreen.py  FindIceberg.py
angle_control/: package.xml  setup.py
angle_control/angle_control/: angle_control_node.py
arduino/drive_controller/: camera.h  config.h  drive_controller.ino  gripper.h  line.h  motor.h  serial.h
drive_controller/: package.xml
drive_controller/config/: params.yaml
drive_controller/src/: drive_controller.cpp
gstreamer/: gso  gsv  package.xml  setup.py
gstreamer/gstreamer/: receiver.py  sender.py
hmi_control/: package.xml  setup.cfg  setup.py
hmi_control/config/: config.json
hmi_control/hmi_control/: hmi_control.py
python/: FindRed.py  hsv_picker.py
robot_msgs/: CMakeLists.txt
robot_msgs/msg/: OmegaAngles.msg
serial/: package.xml
yolo/: yolo_tracker.py
